[project]
name = "search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]
